# SceneConverter

./: CMakeLists.txt  README.MD  batch_convert.py  convert_common.cpp  convert_common.h  convert_gltf.cpp  convert_gltf.h  convert_obj.cpp  convert_obj.h  gltf_utils.cpp  gltf_utils.h  image_loader.cpp  image_loader.h  main.cpp
cmake/Modules/: FindFreeImage.cmake
